fix(css): added overflow: hidden to .todoText to prevent overflow issues

--- a/src/components/Todos/Todo.module.css
+++ b/src/components/Todos/Todo.module.css
@@ -15,6 +15,7 @@
   width: 100%;
   text-align: left;
   align-items: center;
+  overflow: hidden;
 }
 .todoIcon {
   margin-right: 10px;
